tests/neg/ghost-type.scala
class Test {
  ghost type T // error
}
